--- a/site/_styles/sidebar.css
+++ b/site/_styles/sidebar.css
@@ -18,6 +18,9 @@ input#__secondary:checked + label.overlay.overlay-secondary {
       height: 100vh;
       max-height: 100%;
       max-height: 100vh;
+      /* add webkit transition fallback */
+      -webkit-transition: visibility 0.2s ease-out, margin 0.2s ease-out;
+      transition: visibility 0.2s ease-out, margin 0.2s ease-out;
     }
 }
   
