--- a/site/_styles/main-content.css
+++ b/site/_styles/main-content.css
@@ -81,7 +81,7 @@ must come after related colour style(s) which turn borders on. */
         padding-left: unset;
         padding-right: unset;
     }
-    
+
 }
 
 /* Main body
@@ -131,6 +131,11 @@ ul.bd-breadcrumbs li.breadcrumb-item a {
 }
 
 /* breadcrumb divider */
-ul.bd-breadcrumbs li.breadcrumb-item:not(.breadcrumb-home):before {
+ul.bd-breadcrumbs li.breadcrumb-item:before {
     content: ">";
 }
+
+/* clear divider in front of home - work around for early opera version w/o :not support */
+ul.bd-breadcrumbs li.breadcrumb-home:before {
+    content: none;
+} 
